# Packets-Anomaly-Detection

./: .gitignore  CMakeLists.txt  SnifferConfig.h.in  makefile
src/: AnomalyFileReader.cpp  AnomalyFileReader.hpp  AnomalyInterface.hpp  AnomalyReaderInterface.hpp  IpAddr.cpp  IpAddr.hpp  IpAnomaly.cpp  IpAnomaly.hpp  PacketInfo.cpp  PacketInfo.hpp
test/: IpAddrTest.hpp  IpAnomalyTest.hpp  RetrivalTest.cpp  TestInterface.hpp
